# numba_celltree

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README.rst  api.html  genindex.html  index.html  objects.inv  pixi.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  tox.ini
.doctrees/: api.doctree  environment.pickle  index.doctree  sg_execution_times.doctree
.doctrees/examples/: index.doctree  sg_execution_times.doctree  spatial_indexing.doctree  spatial_indexing_1d_grids.doctree  spatial_indexing_1d_network.doctree  spatial_indexing_2d_grids.doctree
.github/workflows/: auto_update_pixi.yml  ci.yml  docs.yml
_downloads/2409606993c32d86d1247f8ccf67814e/: spatial_indexing_2d_grids.py
_downloads/2898f91a1d3d00e555fa19b6a4d6c98e/: spatial_indexing.ipynb
_downloads/3ae6d8c6e5e0e234344edd987e015a9e/: spatial_indexing_1d_network.ipynb
_downloads/743e7003b8e1d668ddf5fc96a9085cd0/: spatial_indexing_1d_grids.ipynb
_downloads/7f8b5043281445d339f0fa77043ed2e7/: spatial_indexing_2d_grids.ipynb
_downloads/bcfd82c62d9662e1244e6114e31840ed/: spatial_indexing_1d_network.py
_downloads/f989545cc7034bd6c0c40e2091705820/: spatial_indexing.py
_modules/: index.html
_modules/numba_celltree/: celltree.html  edge_celltree.html
_sources/: api.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/examples/: index.rst.txt  sg_execution_times.rst.txt  spatial_indexing.rst.txt  spatial_indexing_1d_grids.rst.txt  spatial_indexing_1d_network.rst.txt  spatial_indexing_2d_grids.rst.txt
_static/: documentation_options.js
docs/: api.rst  conf.py  index.rst  sg_execution_times.rst
docs/_static/: theme-deltares.css
docs/_templates/: navbar.html
examples/: README.rst  check.py  index.html  sg_execution_times.html  spatial_indexing.html  spatial_indexing.py  spatial_indexing_1d_grids.html  spatial_indexing_1d_grids.py  spatial_indexing_1d_network.html  spatial_indexing_1d_network.py  spatial_indexing_2d_grids.html
numba_celltree/: __init__.py  aot_compile.py  cast.py  celltree.py  celltree_base.py  compiled.py  constants.py  creation.py  demo.py  edge_celltree.py  geometry_utils.py  query.py  separating_axis.py  sutherland_hodgman.py  utils.py
numba_celltree/algorithms/: __init__.py  barycentric_triangle.py  barycentric_wachspress.py  cohen_sutherland.py  cyrus_beck.py  liang_barsky.py  separating_axis.py  sutherland_hodgman.py  wachspress.py
references/: graphics-algorithms-faq.txt
src/: Cargo.toml  algorithm.rs  common.rs  lib.rs  pyproject.toml
src/algorithms/: barycentric_triangle.rs  mod.rs
src/src/: constants.rs  creation.rs  lib.rs  query.rs
tests/: test_celltree.py  test_celltree_utils.py  test_demo.py  test_edgecelltree.py  test_geometry_utils.py  test_utils.py
tests/data/: README.txt  triangles.txt  voronoi.txt  voronoi_xy.txt  xy.txt
tests/test_algorithms/: test_barycentric.py  test_line_box_clip.py  test_line_polygon_clip.py  test_separating_axis.py  test_sutherland_hodgman.py
