[metadata]
name = numba_celltree
author = Huite Bootsma
author_email = huite.bootsma@deltares.nl
description = Cell Tree Spatial Index
url = https://github.com/Huite/numba_celltree
project_urls =
    Code=https://github.com/Huite/numba_celltree
    Issues=https://github.com/Huite/numba_celltree/issues
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
keywords = 
    mesh
    spatial index
    ugrid
    unstructured grid

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numba >=0.50
    numpy

[options.extras_require]
all = 
    matplotlib
    meshzoo
docs = 
    matplotlib
    meshzoo
    pydata-sphinx-theme
    sphinx
    sphinx-gallery

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
per-file-ignores = 
    __init__.py:F401
    ./docs/conf.py:F401
